Fixed: Bug 27898 - Foldertree stays visible when resizing window

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -2449,6 +2449,9 @@ input.flat-input {
             .default-content-padding { padding-top: 7px; }
         }
     }
+    .foldertree-sidepanel {
+        left: 50px;
+    }
 }
 
 // TINY SCREENS
@@ -2526,6 +2529,10 @@ input.flat-input {
         .rightside-navbar, .rightside { display:none; }
     }
     .input-medium.search-query { width: 80px; }
+
+    .foldertree-sidepanel {
+        left: 0px;
+    }
 }
 
 // landscape fullscreen on iPhone
